# regression-recommender-bot

backend/: pyproject.toml
backend/app/: download_service.py  gpt_service.py  main.py
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.jsx
frontend/src/components/: TestAutomation.jsx
