[project]
name = "backend"
version = "0.1.0"
description = "A backend to interact with a Custom GPT, fetch XML and trigger test automation."
authors = [
    {name = "Gunesh Patil",email = "99651188+gunesh-ushur@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"

# 👇 This tells Poetry where your package code is located
packages = [{ include = "app" }]

[tool.poetry.dependencies]
fastapi = "^0.100"
openai = "^1.1"
requests = "^2.31"
uvicorn = "^0.23"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
